[package]
name = "pamly"
description = "Command line interface for digital pathology tools."
authors = ["Michael Huttner<michael@mhuttner.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/spang-lab/pamly-lib"
repository = "https://github.com/spang-lab/pamly-lib"
keywords = ["cli"]
categories = ["command-line-utilities"]
version = "0.2.5"
edition = "2021"
exclude = ["index.node"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pamly"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pamly"
path = "src/main.rs"

[features]
default = []
convert = ["dep:libc"]

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4", features = ["derive"] }
image = "0.24.7"
imageproc = "0.23.0"
libc = { version="0.2.150", optional = true }
log = "0.4.20"
pyo3 = { version="0.19.0", features=["anyhow"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "4.3.3"
sqlite = "0.32.0"
strum = { version ="0.25.0", features=["derive"] }

