[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[project]
name = "pamly"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
license = "MIT"
keywords = ["pathology"]
authors = [
  {name = "Michael Huttner", email = "pypi@mhuttner.com"}
]
maintainers = [
  {name = "Michael Huttner", email = "pypi@mhuttner.com"}
]

[tool.maturin]
features = ["pyo3/extension-module"]
